@@ -76,10 +76,13 @@
     <property name = "beehiveRESTRootUrl" value="${beehive.REST.Root.Url}" />
     <property name = "beehiveAccountServiceRESTRootUrl" value="${beehiveAccountService.REST.Root.Url}" />
     <property name = "beehiveDeviceDiscoveryServiceRESTRootUrl" value="${beehiveDeviceDiscoveryService.REST.Root.Url}" />
+    <property name = "beehiveControllerCommandServiceRESTRootUrl" value="${beehiveControllerCommandService.REST.Root.Url}" />
     <property name = "beehiveSyncing" value="${controller.performBeehiveSyncing}" />
     <property name = "webappName" value="${controller.applicationname}" />
     <property name = "comPort" value = "${com.port}"/>
     <property name = "lagartoBroadcastAddr" value = "${lagarto_network.broadcast}"/>
+    <property name = "proxyTimeout" value = "${proxy.timeout}"/>
+    <property name = "beehiveCommandServiceCheckInterval" value = "${beehiveCommandService.check.interval}"/>
   </bean>
 
   <!-- round-robin variables -->
@@ -192,7 +195,6 @@
     </constructor-arg>
 
   </bean>
-
 
 
   <!--
