@@ -5,6 +5,14 @@ ORCJAVA-411
     (Marcus Redeker)
 
 
+ORCJAVA-425
+===========
+
+  - Fix broken changes introduced to test suite in 
+    mredeker/Controller_2_0_1_Beehive_Proxy branch, as 
+    part of ORCJAVA-424  (Juha Lindfors)
+
+
 Controller 2.1.0 (2014-XX-XX Twin Galaxies)
 ===========================================
 
@@ -95,7 +103,8 @@ New Features:
   - Support for externally packaged and distributed protocol implementations, 
     such as Z-wave (Marcus Redeker, Juha Lindfors, ORCJAVA-347, ORCJAVA-366)
   - Support for remote access proxy (Marcus Redeker, Eric Bariaux, Juha
-    Lindfors, ORCJAVA-295, ORCJAVA-422, ORCJAVA-424, ORCJAVA-288, ORCJAVA-266)    
+    Lindfors, ORCJAVA-295, ORCJAVA-422, ORCJAVA-424, ORCJAVA-288, ORCJAVA-266,
+    ORCJAVA-411)    
 
 
 Bug Fixes:
